amends from meeting

--- a/app/views/prototypes/all-staff/salary.html
+++ b/app/views/prototypes/all-staff/salary.html
@@ -27,7 +27,7 @@
                 What was their gross annual salary?
               </label><br>
               <span id="sort-code-hint" class="govuk-hint">
-    For example, 23,000
+    For example, £23,000
   </span>
 
             </h1>
