amends from meeting

--- a/app/views/prototypes/all-staff/add.html
+++ b/app/views/prototypes/all-staff/add.html
@@ -55,7 +55,7 @@
 
   
 
-  <br>
+  <br><br>
 
   <h2 class="govuk-heading-m">Date of birth</h2>
 
@@ -95,9 +95,11 @@
   
 </div>
 
-</fieldset><br>
+</fieldset>
 
-<h2 class="govuk-heading-m">Gender</h2>
+<br><br>
+
+<h2 class="govuk-heading-m">Sex</h2>
 
 <fieldset class="govuk-fieldset">
    
@@ -139,7 +141,12 @@
         </label>
       </div>
     </div>
-  </fieldset><br><br>
+  </fieldset>
+
+  <br><br><br>
+
+
+
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h2 class="govuk-heading-m">Ethnicity</h2>
@@ -198,11 +205,18 @@
         </label>
       </div>
     </div>
-  </fieldset><br><br>
+  </fieldset>
+
+  <br><br><br>
+
+
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h2 class="govuk-heading-m">Disability</h2>
     </legend>
+     <span id="nationality-hint" class="govuk-hint">
+       May be a self-reported long-standing illness, condition or impairment which causes difficulty with day-to-day activities. 
+    </span>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
@@ -233,7 +247,12 @@
         </label>
       </div>
     </div>
-  </fieldset><br><br>
+  </fieldset>
+
+
+  <br><br><br>
+
+
   <fieldset class="govuk-fieldset" aria-describedby="nationality-hint">
    
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
@@ -266,7 +285,10 @@
         </label>
       </div>
     </div>
-  </fieldset><br><br><br>
+  </fieldset>
+
+
+  <br><br><br>
 
 
           <a href="staff-zero" class="govuk-button show-continue" style="display: inline;">
