--- a/app/views/prototypes/all-staff/maths.html
+++ b/app/views/prototypes/all-staff/maths.html
@@ -40,7 +40,7 @@
           Level 1
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Example: functional skills or GCSE grade D - G
+          Functional skills or GCSE grade D - G
         </span>
       </div>
       <div class="govuk-radios__item">
