--- a/app/views/prototypes/all-staff/how-long-role.html
+++ b/app/views/prototypes/all-staff/how-long-role.html
@@ -11,16 +11,12 @@
 {% block content %}
 
 
-        <div class="govuk-width-container">
-  <a href="#" class="govuk-back-link">Back</a>
+       <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">John Vincent Adams </span> 
+  <span class="govuk-caption-xl">John Vincent Adams </span><br>
 
-  <main class="govuk-main-wrapper " id="main-content" role="main">
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full">
-        
-          <div class="govuk-form-group">
+  <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
 
             
 
@@ -29,34 +25,34 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How long in current role?
+        How long have they worked in their current role?
       </h1>
-    </legend>
+    </legend><br>
     
     <div class="govuk-radios">
 
        <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Less than one year
+          Less than 1 year
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          One year or more
+          1 year but less then 3 years
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Three years or more
+          3 years but less than 10 years
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          10 years or more
+          10 years and up to 20 years
         </label>
       </div>
       <div class="govuk-radios__item">
