--- a/app/views/prototypes/all-staff/role.html
+++ b/app/views/prototypes/all-staff/role.html
@@ -11,29 +11,28 @@
 {% block content %}
 
 
-        <div class="govuk-width-container">
-  <a href="#" class="govuk-back-link">Back</a>
+        <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">John Vincent Adams </span>   
+  <span class="govuk-caption-xl">John Vincent Adams </span><br>
 
-  <main class="govuk-main-wrapper " id="main-content" role="main">
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full">
-        
-          <div class="govuk-form-group">
-
+  <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
             
 
 
- <div class="govuk-form-group">
-  <fieldset class="govuk-fieldset">
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Job title
+        What is their job role?
       </h1>
-    </legend>
+    </legend><br>
+    
+
+
+
     <p>
-  Which title describes their role?
+  Which is the best description?
 </p>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
@@ -41,13 +40,21 @@
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
           Teacher
         </label>
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          Includes tutors, trainers, instructors and assessors
+        </span>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Senior leader
+          Senior manager
         </label>
+
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          Principals, vice-principals, directors, CEOs or part of a senior management team
+        </span>
       </div>
+
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
