--- a/app/views/prototypes/all-staff/maths.html
+++ b/app/views/prototypes/all-staff/maths.html
@@ -17,7 +17,7 @@
   <span class="govuk-caption-xl">John Vincent Adams </span><br>
 
   <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds-from-desktop">
+      <div class="govuk-grid-column-two-thirds">
             
 
 
@@ -69,7 +69,7 @@
           Level 4
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Need copy
+          Certificate of higher education
         </span>
         
       </div>
@@ -80,7 +80,7 @@
           Level 5
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-         Need copy
+         Foundation degree
         </span>
         
       </div>
@@ -91,7 +91,7 @@
           Level 6
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Degree or equivalent
+          Undergraduate degree or equivalent 
         </span>
       </div>
 
@@ -101,7 +101,7 @@
           Level 7
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Post graduate or equivalent
+          Postgraduate degree or equivalent
         </span>
       </div>
 
@@ -110,14 +110,18 @@
         <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
           Don't know
         </label>
+
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          .
+        </span>
         </div>
 
-        <br>
+        
 
        <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="how-contacted-conditional" name="how-contacted" type="radio" value="email" data-aria-controls="conditional-how-contacted-conditional">
-        <label class="govuk-label govuk-radios__label" for="how-contacted-conditional">
+        <input class="govuk-radios__input" id="how-contacted-conditional" name="how-contacted" type="radio" value="" data-aria-controls="conditional-how-contacted-conditional">
+        <label class="govuk-label govuk-radios__label" for="">
           Other
         </label>
       </div>
