--- a/app/views/prototypes/all-staff/english.html
+++ b/app/views/prototypes/all-staff/english.html
@@ -25,7 +25,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="sign-in-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What's their highest qualification in English?
+        What is their highest qualification in English?
       </h1>
     </legend>
     <!--<span id="sign-in-hint" class="govuk-hint">
