--- a/app/views/prototypes/all-staff/english.html
+++ b/app/views/prototypes/all-staff/english.html
@@ -60,7 +60,7 @@
           Level 4
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Need copy
+          Certificate of higher education
         </span>
         
       </div>
@@ -71,7 +71,7 @@
           Level 5
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Need copy
+          Foundation degree
         </span>
         
       </div>
@@ -82,7 +82,7 @@
           Level 6
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Degree or equivalent
+          Undergraduate Degree or equivalent
         </span>
       </div>
 
@@ -92,7 +92,7 @@
           Level 7
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Post graduate or equivalent
+          Postgraduate degree or equivalent
         </span>
       </div>
 <div class="govuk-radios__item">
