--- a/app/views/prototypes/all-staff/highest-subject.html
+++ b/app/views/prototypes/all-staff/highest-subject.html
@@ -25,7 +25,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What's their highest qualification in the main subject they teach?
+        What is the highest qualification in their main subject?
       </h1>
     </legend><br>
     
