--- a/app/views/prototypes/all-staff/subject-type.html
+++ b/app/views/prototypes/all-staff/subject-type.html
@@ -437,6 +437,7 @@
           SEN or Supported learning provision
         </label>
       </div>
+
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
@@ -444,6 +445,12 @@
         </label>
       </div>
       
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
+        <label class="govuk-label govuk-checkboxes__label" for="waste">
+          Functional skills
+        </label>
+      </div>
     
 
       
@@ -485,11 +492,11 @@
 
     </div>
   </fieldset>
-</div>
+
 </div>
 
 
-<br><br>
+
 
 
           <a href="highest-subject" class="govuk-button show-continue" style="display: inline;">
