--- a/app/views/prototypes/all-staff/highest-subject.html
+++ b/app/views/prototypes/all-staff/highest-subject.html
@@ -28,6 +28,8 @@
         What is the highest qualification in their main subject?
       </h1>
     </legend><br>
+
+    <p>Their main subject is the one that takes up the largest part of their timetable.</p>
     
     <div class="govuk-radios">
       
