--- a/app/views/prototypes/all-staff/contracted-hours.html
+++ b/app/views/prototypes/all-staff/contracted-hours.html
@@ -28,16 +28,23 @@
         What are their contracted hours?
       </h1>
     </legend><br>
-    
-    
 
 
+          
+              <span id="sort-code-hint" class="govuk-hint">
+    For example, 20 
+  </span>
+
+            </h1>
+            <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text">
+          </div>
 
     
   </fieldset>
 </div>
+</div>
 
-<br><br>
+<br>
 
 
           <a href="fte" class="govuk-button show-continue" style="display: inline;">
@@ -46,7 +53,7 @@
        
       </div>
     </div>
-  </main>
+ 
 </div>
 
 
