--- a/app/views/prototypes/all-staff/funding.html
+++ b/app/views/prototypes/all-staff/funding.html
@@ -28,7 +28,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Does your organisation offer funding for teacher training?
+        Is their teacher training being finded by your organisation?
       </h1>
     </legend><br>
     <div class="govuk-radios">
@@ -41,7 +41,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Yes - part paid
+          Yes - in part
         </label>
       </div>
       <div class="govuk-radios__item">
@@ -59,14 +59,6 @@
     </div>
   </fieldset>
 </div>
-
-
-  
-
-
-
-   
-
 
  
 </div>
