--- a/app/views/prototypes/new-start/one.html
+++ b/app/views/prototypes/new-start/one.html
@@ -19,7 +19,7 @@
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
-
+ 
             
 
   <div class="govuk-form-group">
@@ -28,7 +28,11 @@
       <h1 class="govuk-fieldset__heading">
         How many teaching vacancies did you have this year?
       </h1>
-    </legend><br>
+    </legend>
+<span class="govuk-caption-xl">August 2021 to September 2022</span></h1>
+
+
+    <br>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
