--- a/app/views/prototypes/all-staff/what-training.html
+++ b/app/views/prototypes/all-staff/what-training.html
@@ -25,7 +25,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What teacher training are they studying?
+        What teacher training are they working towards?
       </h1>
     </legend><br>
     
@@ -86,28 +86,29 @@
         </span>
       </div>
 
-       
+      <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="how-contacted-conditional" name="how-contacted" type="radio" value="" data-aria-controls="conditional-how-contacted-conditional">
+        <label class="govuk-label govuk-radios__label" for="">
+          Other
+        </label>
+      </div>
+      <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-how-contacted-conditional">
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="contact-by-email">
+           Enter the qualification
+          </label>
+          <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
+        </div>
 
        
     </div>
-  </fieldset>
+  </fieldset>      
+   
 </div>
-</div>
+  
 
 <br>
-
-
-
-  
-
-
-
-   
-
-
-  
-
-<br><br>
 
 
           <a href="funding" class="govuk-button show-continue" style="display: inline;">
