--- a/app/views/prototypes/all-staff/role.html
+++ b/app/views/prototypes/all-staff/role.html
@@ -73,7 +73,7 @@
       <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-how-contacted-conditional">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-email">
-           Enter their job title
+           Enter another role
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
         </div>
@@ -84,7 +84,7 @@
   </fieldset>
 </div>
 
-<br><br>
+<br>
 
 
           <a href="how-long-role" class="govuk-button show-continue" style="display: inline;">
