--- a/app/views/prototypes/provider-eve/confirmation.html
+++ b/app/views/prototypes/provider-eve/confirmation.html
@@ -25,7 +25,7 @@
       <div class="govuk-grid-column-two-thirds">
         <div class="govuk-panel govuk-panel--confirmation">
           <h1 class="govuk-panel__title">
-           Provider information submitted
+           You have submitted your provider information
           </h1>
           <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
@@ -34,7 +34,7 @@
 
         <p class="govuk-body"></p>
 
-        <h2 class="govuk-heading-m">You have submitted your provider information. You also need to submit your staff information.</h2>
+        <h2 class="govuk-heading-m">You need to submit your <a href="/prototypes/all-staff/start-staff" class="govuk-link">staff information</a></h2>
 
         
        <!-- <p class="govuk-body">
