--- a/app/views/prototypes/all-staff/start-staff.html
+++ b/app/views/prototypes/all-staff/start-staff.html
@@ -29,7 +29,7 @@
   <ul class="browse-list">
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="staff">About my organisation</a>
+        <a class="browse-list-item-link" href="#">About my organisation</a>
         
         
       </li>
