--- a/app/views/prototypes/provider-eve/start-staff.html
+++ b/app/views/prototypes/provider-eve/start-staff.html
@@ -37,7 +37,7 @@
       
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="choose">My staff</a>
+        <a class="browse-list-item-link" a href="/prototypes/all-staff/start-staff">My staff</a>
 
         
         
