--- a/app/views/prototypes/all-staff/add.html
+++ b/app/views/prototypes/all-staff/add.html
@@ -215,7 +215,7 @@
       <h2 class="govuk-heading-m">Disability</h2>
     </legend>
      <span id="nationality-hint" class="govuk-hint">
-       May be a self-reported long-standing illness, condition or impairment which causes difficulty with day-to-day activities. 
+       This could be a self-reported long-standing illness, condition or impairment which causes difficulty with day-to-day activities. 
     </span>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
