--- a/app/views/prototypes/all-staff/list-staff-john-end.html
+++ b/app/views/prototypes/all-staff/list-staff-john-end.html
@@ -61,11 +61,20 @@
 
         
 
+         <h2 class="govuk-heading-m govuk-!-font-size-27">Check and submit</h2>
+
+        <p class="govuk-body">By submitting - you are confirming that, to the best of your knowledge, the details you are providing are correct.</p><br>
+
+        <form action="/form-handler" method="post" novalidate>
+
           <input type="hidden" name="answers-checked" value="true">
 
-          <a href="#" class="govuk-button show-continue" style="display: inline;">
-     Submit staff
+          <a href="confirmation" class="govuk-button show-continue" style="display: inline;">
+      Submit staff details
     </a>
+
+        </form>
+
 
         
       </div>
