--- a/app/views/prototypes/all-staff/confirmation.html
+++ b/app/views/prototypes/all-staff/confirmation.html
@@ -41,7 +41,7 @@
           We’ve sent your application to Hackney Electoral Register Office.
         </p>-->
         <p class="govuk-body">
-          They will contact you to confirm your submission or to ask for more information.
+          We will contact you to confirm your submission or to ask for more information.
         </p>
 
         <p class="govuk-body">
