--- a/app/views/prototypes/all-staff/funding.html
+++ b/app/views/prototypes/all-staff/funding.html
@@ -28,7 +28,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Is their teacher training being finded by your organisation?
+        Is their teacher training being funded by your organisation?
       </h1>
     </legend><br>
     <div class="govuk-radios">
