--- a/app/views/prototypes/all-staff/add.html
+++ b/app/views/prototypes/all-staff/add.html
@@ -227,7 +227,7 @@
       <div class="govuk-radios__divider">or</div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-6" name="ethnic-group" type="radio" value="prefer-not-to-say">
-        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-7">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-6">
           Prefer not to say
         </label>
       </div>
@@ -287,7 +287,7 @@
     </legend>
     
     <span id="nationality-hint" class="govuk-hint">
-      If you have dual nationality, select all options that are relevant to you.
+      If they have dual nationality, select all options that are relevant.
     </span>
     <div class="govuk-checkboxes">
 
