--- a/app/views/prototypes/all-staff/highest-subject.html
+++ b/app/views/prototypes/all-staff/highest-subject.html
@@ -29,7 +29,7 @@
       </h1>
     </legend><br>
 
-    <p>Their main subject is the one that takes up the largest part of their timetable.</p>
+    <p>The subject for which the individual teaches the largest part of their timetable in a standard working week.</p>
     
     <div class="govuk-radios">
       
