--- a/app/views/prototypes/all-staff/how-long-education.html
+++ b/app/views/prototypes/all-staff/how-long-education.html
@@ -27,11 +27,11 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How long have they worked in the further education sector?
+        How long has the staff member worked in the further education sector?
       </h1>
     </legend><br>
 
-    <p>This is the time spent in FE roles before joining your organisation.</p>
+    <p>This includes time spent in previous roles they held before joining your current organisation</p>
     
     
     <div class="govuk-radios">
