--- a/app/views/prototypes/all-staff/role.html
+++ b/app/views/prototypes/all-staff/role.html
@@ -24,16 +24,10 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What is their job role?
+        Which best describes their role?
       </h1>
     </legend><br>
     
-
-
-
-    <p>
-  Which is the best description?
-</p>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
@@ -51,7 +45,7 @@
         </label>
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Principals, vice-principals, directors, CEOs or part of a senior management team
+          This could include principals and vice-principals of colleges, working directors and CEOs of organisations and companies, and other people who would be considered part of a senior management team
         </span>
       </div>
 
