--- a/app/views/prototypes/all-staff/what-teaching-qualification.html
+++ b/app/views/prototypes/all-staff/what-teaching-qualification.html
@@ -130,7 +130,7 @@
 
 
 
-          <a href="training" class="govuk-button show-continue" style="display: inline;">
+          <a href="what-training" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
