--- a/app/views/prototypes/all-staff/subject-type.html
+++ b/app/views/prototypes/all-staff/subject-type.html
@@ -39,6 +39,10 @@
         </span>
       </h2>
     </div>
+    <span id="sort-code-hint" class="govuk-hint">
+    A levels and GCSEs
+  </span>
+    
     <div id="accordion-default-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-1">
        <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
@@ -233,6 +237,9 @@
         </span>
       </h2>
     </div>
+     <span id="sort-code-hint" class="govuk-hint">
+    T levels, apprenticeship programmes
+  </span>
     <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
       <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
@@ -344,13 +351,13 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="citizenship-conditional" name="citizen" type="checkbox" value="email" data-aria-controls="conditional-citizenship-conditional">
         <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional">
-          Other technical / vocational subject 1 
+          Other learning programmes subject 1 
         </label>
       </div>
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-email">
-            Subject
+            
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
         </div>
@@ -363,13 +370,13 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="citizenship-conditional-2" name="citizen" type="checkbox" value="phone" data-aria-controls="conditional-citizenship-conditional-2">
         <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-2">
-          Other technical / vocational subject 2
+          Other learning programmes subject 2
         </label>
       </div>
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional-2">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-phone">
-            Subject
+            
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-phone" name="contact-by-phone" type="tel">
         </div>
@@ -378,13 +385,13 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="citizenship-conditional-3" name="citizen" type="checkbox" value="text message" data-aria-controls="conditional-citizenship-conditional-3">
         <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-3">
-          Other technical / vocational subject 3
+          Other learning programmes subject 3
         </label>
       </div>
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional-3">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-text">
-            Subject
+            
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-text" name="contact-by-text" type="tel">
         </div>
