--- a/app/views/prototypes/all-staff/answers-john-one.html
+++ b/app/views/prototypes/all-staff/answers-john-one.html
@@ -191,7 +191,7 @@
         
 
 
-       <h2 class="govuk-heading-m">Qualifications</h2>
+       <h2 class="govuk-heading-m">Qualifications and subjects</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
@@ -318,60 +318,7 @@
 
 
 
-        <h2 class="govuk-heading-m">Subjects taught</h2>
-
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Name
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Romeo Bridger
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Phone number
-            </dt>
-            <dd class="govuk-summary-list__value">
-              0789 997 6604
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          
-          
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Email
-            </dt>
-            <dd class="govuk-summary-list__value">
-              rbridger@elatt.co.uk
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"> </span>
-              </a>
-            </dd>
-          </div>
-
-          
-
-
-
-        </dl>
+  
 
 
         <h2 class="govuk-heading-m">Contract</h2>
