--- a/app/views/prototypes/all-staff/answers-john.html
+++ b/app/views/prototypes/all-staff/answers-john.html
@@ -56,7 +56,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Gender
+              Sex
             </dt>
             <dd class="govuk-summary-list__value">
               <p class="govuk-body">Male</p>
