--- a/app/views/prototypes/all-staff/answers-staff.html
+++ b/app/views/prototypes/all-staff/answers-staff.html
@@ -44,7 +44,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Gender
+              Sex
             </dt>
             <dd class="govuk-summary-list__value">
               Male
