--- a/app/views/prototypes/all-staff/list-staff-john-end.html
+++ b/app/views/prototypes/all-staff/list-staff-john-end.html
@@ -63,7 +63,7 @@
 
          <h2 class="govuk-heading-m govuk-!-font-size-27">Check and submit</h2>
 
-        <p class="govuk-body">By submitting - you are confirming that, to the best of your knowledge, the details you are providing are correct.</p><br>
+        <p class="govuk-body">By submitting, you are confirming that to the best of your knowledge, the details you are providing are correct.</p><br>
 
         <form action="/form-handler" method="post" novalidate>
 
