--- a/app/views/prototypes/all-staff/list-staff.html
+++ b/app/views/prototypes/all-staff/list-staff.html
@@ -72,11 +72,19 @@
       
         
 
+          <h2 class="govuk-heading-m govuk-!-font-size-27">Check and submit</h2>
+
+        <p class="govuk-body">By submitting, you are confirming that to the best of your knowledge, the details you are providing are correct.</p><br>
+
+        <form action="/form-handler" method="post" novalidate>
+
           <input type="hidden" name="answers-checked" value="true">
 
           <a href="confirmation" class="govuk-button show-continue" style="display: inline;">
-      Submit
+      Submit your staff information
     </a>
+
+        </form>
 
         </form>
 
