--- a/app/views/prototypes/all-staff/start-staff.html
+++ b/app/views/prototypes/all-staff/start-staff.html
@@ -37,7 +37,7 @@
       
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="choose">My staff</a>
+        <a class="browse-list-item-link" href="mis">My staff</a>
 
         
         
