--- a/app/views/prototypes/provider-eve/answers-provider.html
+++ b/app/views/prototypes/provider-eve/answers-provider.html
@@ -30,6 +30,35 @@
 
         <h1 class="govuk-heading-xl">Check your answers</h1>
 
+        <h2 class="govuk-heading-m">Staff</h2>
+        
+
+       
+        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Employed staff
+            </dt>
+            <dd class="govuk-summary-list__value">
+              10
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change
+                <span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+
+          
+
+
+        </dl>
+
+
+
         <h2 class="govuk-heading-m">Salary spend</h2>
         
 
@@ -173,182 +202,11 @@
 
 
 
-        
-
-
-       <!-- <h2 class="govuk-heading-m">Application owner</h2>
-
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Name
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Romeo Bridger
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Phone number
-            </dt>
-            <dd class="govuk-summary-list__value">
-              0789 009 8800
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          
-          
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Email
-            </dt>
-            <dd class="govuk-summary-list__value">
-              rbridger@elatt.co.uk
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"> </span>
-              </a>
-            </dd>
-          </div>
-
-          
-
-        </dl>
-
-
-
-        <h2 class="govuk-heading-m">Super user</h2>
-
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Name
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Romeo Bridger
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Phone number
-            </dt>
-            <dd class="govuk-summary-list__value">
-              0789 997 6604
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          
-          
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Email
-            </dt>
-            <dd class="govuk-summary-list__value">
-              rbridger@elatt.co.uk
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"> </span>
-              </a>
-            </dd>
-          </div>
-
-          
-
-
-
-        </dl>
-
-
-        <h2 class="govuk-heading-m">Agreement signatory</h2>
-
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Name
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Jane Smith
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Phone number
-            </dt>
-            <dd class="govuk-summary-list__value">
-              0789 997 6604
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          
-          
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Email
-            </dt>
-            <dd class="govuk-summary-list__value">
-              jsmith@elatt.co.uk
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"> </span>
-              </a>
-            </dd>
-          </div>
-
-          
-
-          
-
-        </dl>-->
-
 
 
 <h2 class="govuk-heading-m govuk-!-font-size-27">Check and submit</h2>
 
-        <p class="govuk-body">By submitting this application you are confirming that, to the best of your knowledge, the details you are providing are correct.</p><br>
+        <p class="govuk-body">By submitting, you are confirming that to the best of your knowledge, the details you are providing are correct.</p><br>
 
         <form action="/form-handler" method="post" novalidate>
 
@@ -368,9 +226,7 @@
 </fieldset><br>
 
 
-        <!--  <a href="seven" class="govuk-button show-continue" style="display: inline;">
-      Continue
-    </a>-->
+        
        
       </div>
     </div>
