--- a/app/views/prototypes/all-staff/date-stop.html
+++ b/app/views/prototypes/all-staff/date-stop.html
@@ -24,7 +24,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  What date did they stop working for this organisation
+  What date did they stop working for your organisation?
 </h1>
 
   
