--- a/app/views/prototypes/all-staff/complete-john-two.html
+++ b/app/views/prototypes/all-staff/complete-john-two.html
@@ -58,7 +58,7 @@
           
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="maths" aria-describedby="company-information-completed">
+                <a href="subject-type" aria-describedby="company-information-completed">
                   Qualifications and subjects
                 </a>
               </span>
