--- a/app/views/prototypes/all-staff/english.html
+++ b/app/views/prototypes/all-staff/english.html
@@ -126,7 +126,7 @@
 <br>
 
 
-          <a href="subject-type" class="govuk-button show-continue" style="display: inline;">
+          <a href="teaching-qualification" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
