--- a/app/views/prototypes/all-staff/highest-subject.html
+++ b/app/views/prototypes/all-staff/highest-subject.html
@@ -131,7 +131,7 @@
 <br>
 
 
-          <a href="teaching-qualification" class="govuk-button show-continue" style="display: inline;">
+          <a href="maths" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
