--- a/app/views/prototypes/all-staff/left2.html
+++ b/app/views/prototypes/all-staff/left2.html
@@ -23,30 +23,35 @@
         
 
 <div class="govuk-form-group">
-  <fieldset class="govuk-fieldset" aria-describedby="how-contacted-conditional-hint">
+  <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
         Do they still work for your organisation?
       </h1>
     </legend><br>
+    <!--<span id="changed-name-hint" class="govuk-hint">
+      This includes changing your last name or spelling your name differently.
+    </span>-->
+
+
     
-    <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+    <div class="govuk-radios govuk-radios--inline">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="how-contacted-conditional" name="how-contacted" type="radio" value="email" data-aria-controls="conditional-how-contacted-conditional">
-        <label class="govuk-label govuk-radios__label" for="how-contacted-conditional">
+        <input class="govuk-radios__input" id="changed-name" name="changed-name" type="radio" value="yes">
+        <label class="govuk-label govuk-radios__label" for="changed-name">
           Yes
         </label>
       </div>
-      
-
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="how-contacted-conditional-2" name="how-contacted" type="radio" value="phone" data-aria-controls="conditional-how-contacted-conditional-2">
-        <label class="govuk-label govuk-radios__label" for="how-contacted-conditional-2">
-          No they've left
+        <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
+        <label class="govuk-label govuk-radios__label" for="changed-name-2">
+          No
         </label>
       </div>
-      <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-how-contacted-conditional-2">
-        <p>When did they leave?</p>
+    </div>
+  </fieldset>
+</div>
+<p>When did they leave?</p>
   
     <span id="dob-hint" class="govuk-hint">
       For example, 31 3 1980
@@ -78,13 +83,6 @@
       </div>
     </div>
 
-      </div>
-      
-      
-    </div>
-  </fieldset>
-</div>
-
     
   
 </div>
@@ -92,7 +90,7 @@
 </fieldset>
 </div>
 
-<br>
+<br><br>
 
 
           <a href="reasons" class="govuk-button show-continue" style="display: inline;">
