--- a/app/views/prototypes/all-staff/date1.html
+++ b/app/views/prototypes/all-staff/date1.html
@@ -16,37 +16,17 @@
 
    <span class="govuk-caption-xl">John Vincent Adams </span>
 
-<br>
-  
+
+  <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         
+          <div class="govuk-form-group">
 
-<div class="govuk-form-group">
-  <fieldset class="govuk-fieldset" aria-describedby="how-contacted-conditional-hint">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-      <h1 class="govuk-fieldset__heading">
-        Do they still work for your organisation?
-      </h1>
-    </legend><br>
-    
-    <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="how-contacted-conditional" name="how-contacted" type="radio" value="email" data-aria-controls="conditional-how-contacted-conditional">
-        <label class="govuk-label govuk-radios__label" for="how-contacted-conditional">
-          Yes
-        </label>
-      </div>
-      
+            <h1 class="govuk-heading-xl">
+  What date did they stop working for your organisation?
+</h1>
 
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="how-contacted-conditional-2" name="how-contacted" type="radio" value="phone" data-aria-controls="conditional-how-contacted-conditional-2">
-        <label class="govuk-label govuk-radios__label" for="how-contacted-conditional-2">
-          No they've left
-        </label>
-      </div>
-      <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-how-contacted-conditional-2">
-        <p>When did they leave?</p>
   
     <span id="dob-hint" class="govuk-hint">
       For example, 31 3 1980
@@ -78,19 +58,11 @@
       </div>
     </div>
 
-      </div>
-      
-      
-    </div>
-  </fieldset>
-</div>
-
     
   
 </div>
 
-</fieldset>
-</div>
+</fieldset><br>
 
 <br>
 
@@ -100,7 +72,8 @@
     </a>
        
       </div>
-  
+    </div>
+  </main>
 </div>
 
 
