--- a/app/views/prototypes/all-staff/add.html
+++ b/app/views/prototypes/all-staff/add.html
@@ -33,7 +33,7 @@
 </div>-->
   <div class="govuk-form-group">
   <label class="govuk-label" for="full-name">
-    First name
+    First names
   </label>
   <input class="govuk-input" id="full-name" name="full-name" type="text" autocomplete="name" spellcheck="false">
 </div>
