--- a/app/views/prototypes/all-staff/answers-staff.html
+++ b/app/views/prototypes/all-staff/answers-staff.html
@@ -34,7 +34,7 @@
               10.01.1992
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="gender2">
+              <a class="govuk-link" href="edit">
                 Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
@@ -50,8 +50,8 @@
               Male
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="gender2">
-                Change<span class="govuk-visually-hidden"> Gender</span>
+              <a class="govuk-link" href="edit">
+                Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
           </div>
@@ -65,7 +65,7 @@
               White
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="ethnicity2">
+              <a class="govuk-link" href="edit">
                 Change<span class="govuk-visually-hidden"> Ethnicity</span>
               </a>
             </dd>
@@ -79,7 +79,7 @@
               No
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="disability2">
+              <a class="govuk-link" href="edit">
                 Change<span class="govuk-visually-hidden"> Disability</span>
               </a>
             </dd>
@@ -93,7 +93,7 @@
               British
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="nationality2">
+              <a class="govuk-link" href="">
                 Change<span class="govuk-visually-hidden"> Nationality</span>
               </a>
             </dd>
