--- a/app/views/prototypes/all-staff/edit.html
+++ b/app/views/prototypes/all-staff/edit.html
@@ -378,7 +378,7 @@
   <br><br><br>
 
 
-          <a href="staff-zero" class="govuk-button show-continue" style="display: inline;">
+          <a href="answers-staff" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
