--- a/app/views/prototypes/all-staff/contract.html
+++ b/app/views/prototypes/all-staff/contract.html
@@ -90,7 +90,7 @@
 
 
 
-          <a href="paid" class="govuk-button show-continue" style="display: inline;">
+          <a href="salary" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
