--- a/app/views/prototypes/all-staff/date-stop.html
+++ b/app/views/prototypes/all-staff/date-stop.html
@@ -95,7 +95,7 @@
 <br>
 
 
-          <a href="reasons" class="govuk-button show-continue" style="display: inline;">
+          <a href="complete-john-five" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
