--- a/app/views/prototypes/all-staff/list-staff-john-end.html
+++ b/app/views/prototypes/all-staff/list-staff-john-end.html
@@ -41,11 +41,11 @@
 
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="complete-john" aria-describedby="eligibility-completed">
+                <a href="#" aria-describedby="eligibility-completed">
                   Julie Anne Angelo
                 </a>
               </span>
-              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong>
+              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
             </li>
             
           </ul>
