--- a/app/views/prototypes/provider-eve/subjects.html
+++ b/app/views/prototypes/provider-eve/subjects.html
@@ -24,7 +24,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Which subjects were difficult to find teacher support staff for?
+        Which subjects were difficult to find staff for?
       </h1>
     </legend>
     <span id="waste-hint" class="govuk-hint">
