--- a/app/views/prototypes/provider-eve/what-type.html
+++ b/app/views/prototypes/provider-eve/what-type.html
@@ -97,7 +97,7 @@
 
 
 
-          <a href="subjects" class="govuk-button show-continue" style="display: inline;">
+          <a href="vacancies-subject" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
