--- a/app/views/prototypes/all-staff/edit.html
+++ b/app/views/prototypes/all-staff/edit.html
@@ -106,9 +106,8 @@
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
-          Male
-        </label>
+        
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group" checked="checked">Male</label>
         <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint" value="true">
         </span>
       </div>
