--- a/app/views/prototypes/provider-eve/support.html
+++ b/app/views/prototypes/provider-eve/support.html
@@ -23,7 +23,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How many teaching vacancies did you have in the past academic year?
+        How many support staff vacancies did you have in the past academic year?
       </h1>
     </legend><br>
     <div class="govuk-radios">
@@ -64,7 +64,7 @@
 </div><br>
 
 
-          <a href="support" class="govuk-button show-continue" style="display: inline;">
+          <a href="filled" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
