--- a/app/views/prototypes/provider-eve/answers-provider.html
+++ b/app/views/prototypes/provider-eve/answers-provider.html
@@ -113,7 +113,7 @@
         
            <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Leadership
+              Leader vacancies
             </dt>
             <dd class="govuk-summary-list__value">
               More than 10
@@ -127,7 +127,21 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Teaching
+              Teaching vacancies
+            </dt>
+            <dd class="govuk-summary-list__value">
+              1 - 5
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+           <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Support vacancies
             </dt>
             <dd class="govuk-summary-list__value">
               1 - 5
