--- a/app/views/prototypes/small-itp/staff-totals.html
+++ b/app/views/prototypes/small-itp/staff-totals.html
@@ -35,7 +35,7 @@ Include part-time staff.
 
   <div class="govuk-form-group">
     <label class="govuk-label" for="address-postcode">
-      Management
+      Senior leadership 
     </label>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
