--- a/app/views/prototypes/small-itp/many-vacancies.html
+++ b/app/views/prototypes/small-itp/many-vacancies.html
@@ -23,7 +23,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What was the average length of time it took to fill these vacancies?
+        How many vacancies did you have over the past academic year?
       </h1>
     </legend><br>
 
@@ -37,30 +37,34 @@
       </h2>
     </div>
     <div id="accordion-default-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-1">
-      
+   
+
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset">
+    
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          1 month or less
+          None
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          2 - 3 months
+          1 - 5
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          4 - 5 months
+          6 - 10
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-          6 months or more
+          More than 10
         </label>
 
         
@@ -71,11 +75,15 @@
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
           Don't know
         </label>
-      </div><br>
-  
-    </div>
+      </div>
+  </fieldset>
+</div><br>
   </div>
-</div>
+  </div>
+
+
+
+
   <div class="govuk-accordion__section ">
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
@@ -86,29 +94,32 @@
     </div>
     <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
             
+    <div class="govuk-form-group">
+  <fieldset class="govuk-fieldset">
+    
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          1 month or less
+          None
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          2 - 3 months
+          1 - 5
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          4 - 5 months
+          6 - 10
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-          6 months or more
+          More than 10
         </label>
 
         
@@ -119,11 +130,15 @@
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
           Don't know
         </label>
-      </div><br>
-  
-    </div>
+      </div>
+  </fieldset>
+</div><br>
   </div>
   </div>
+
+
+
+
   <div class="govuk-accordion__section ">
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
@@ -134,29 +149,32 @@
     </div>
     <div id="accordion-default-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-3">
             
+    <div class="govuk-form-group">
+  <fieldset class="govuk-fieldset">
+    
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          1 month or less
+          None
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          2 - 3 months
+          1 - 5
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          4 - 5 months
+          6 - 10
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-          6 months or more
+          More than 10
         </label>
 
         
@@ -167,9 +185,9 @@
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
           Don't know
         </label>
-      </div><br>
-  
-    </div>
+      </div>
+  </fieldset>
+</div><br>
   </div>
     </div>
   </div>
@@ -180,7 +198,7 @@
 
 
 
-          <a href="easy" class="govuk-button show-continue" style="display: inline;">
+          <a href="filled" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
