--- a/app/views/prototypes/small-itp/staff.html
+++ b/app/views/prototypes/small-itp/staff.html
@@ -49,7 +49,7 @@
 </fieldset><br><br>
 
 
-          <a href="leadership" class="govuk-button show-continue" style="display: inline;">
+          <a href="many-vacancies" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
