--- a/app/views/prototypes/small-itp/staff-totals.html
+++ b/app/views/prototypes/small-itp/staff-totals.html
@@ -24,7 +24,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  How many staff do you employ?
+  How many staff did you employ in the 2021/2022 academic year?
 </h1>
 
             
@@ -37,6 +37,9 @@ Include part-time staff.
     <label class="govuk-label" for="address-postcode">
       Senior leadership 
     </label>
+    <span id="sort-code-hint" class="govuk-hint">
+          This could include principals and vice-principals of colleges, working directors and CEOs of organisations and companies, and other people who would be considered part of a senior management team
+        </span>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
 
@@ -45,6 +48,9 @@ Include part-time staff.
     <label class="govuk-label" for="address-postcode">
       Teaching
     </label>
+   <span id="sort-code-hint" class="govuk-hint">
+          Includes tutors, trainers, instructors and assessors
+        </span>
     <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
   </div>
 
