--- a/app/views/prototypes/small-itp/complete-john-two.html
+++ b/app/views/prototypes/small-itp/complete-john-two.html
@@ -71,7 +71,7 @@
 
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="contract">
+               <a href="what-contract">
                   Contract
                 </a>
               </span>
