--- a/app/views/prototypes/small-itp/complete-john.html
+++ b/app/views/prototypes/small-itp/complete-john.html
@@ -70,7 +70,7 @@
 
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="contract">
+                <a href="what-contract">
                   Contract
                 </a>
               </span>
