--- a/app/views/prototypes/small-itp/many-vacancies-filled.html
+++ b/app/views/prototypes/small-itp/many-vacancies-filled.html
@@ -23,7 +23,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How many vacancies did you have over the past academic year?
+        How many of these vacancies were filled in the past academic year?
       </h1>
     </legend><br>
 
@@ -198,7 +198,7 @@
 
 
 
-          <a href="many-vacancies-filled" class="govuk-button show-continue" style="display: inline;">
+          <a href="filled" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
