--- a/app/views/prototypes/small-itp/answers-provider.html
+++ b/app/views/prototypes/small-itp/answers-provider.html
@@ -226,15 +226,18 @@
 
           <input type="hidden" name="answers-checked" value="true">
 
-          <a href="confirmation-provider" class="govuk-button show-continue" style="display: inline;">
+          <a href="confirmation-provider" class="govuk-button show-continue">
       Submit your provider information
     </a>
+  &nbsp; &nbsp;
+
+    <a href="start-staff"  class="govuk-button govuk-button--secondary">Save and finish later</a>
 
         </form>
 
       </div>
     </div>
-  </main>
+  
 </div>
 
 </fieldset><br>
