--- a/app/views/prototypes/small-itp/list-staff-john-end.html
+++ b/app/views/prototypes/small-itp/list-staff-john-end.html
@@ -69,9 +69,15 @@
 
           <input type="hidden" name="answers-checked" value="true">
 
-          <a href="confirmation" class="govuk-button show-continue" style="display: inline;">
+          <a href="confirmation" class="govuk-button show-continue">
       Submit staff details
     </a>
+
+    &nbsp; &nbsp;
+
+    <a href="start-staff"  class="govuk-button govuk-button--secondary">Save and finish later</a>
+
+        
 
         </form>
 
